added numpy requirement

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
-requirements : #Day 2 Training @Interglad solution pvt ltd. 
+requirements :                  #Day 2 Training @Interglad solution pvt ltd. 
 1>    pip install python 3.12.9
-2>    Classes and objects
-3>    Models Concept
+2>    pip install numpy         #for ND array configurations
+3>    Classes and objects  
+4>    Models Concept
